--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "spacy" %}
-{% set version = "1.2.0" %}
-{% set sha256sum = "503595cbf2a36fc99ccc615650dbfb99f5357b53ccb857813ba28134ff823473" %}
+{% set version = "1.3.0" %}
+{% set sha256sum = "fcaac7b5ff3f518aa395254773af0c03fefe19528ee056e396745432a0c6ddee" %}
 
 package:
   name: {{ name }}
@@ -12,31 +12,22 @@ source:
   sha256: {{ sha256sum }}
 
 build:
-  number: 1
+  number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
-  skip: True  # [win32 or linux32]
+  skip: True  # [not x86_64]
   features:
     - vc9   # [win and py27]
-    - vc10  # [win and py34]
-    - vc14  # [win and py>34]
+    - vc14  # [win and py35]
+    - vc14  # [win and py36]
 
 # Numpy version supported is >= 1.7.
 requirements:
   build:
-    - toolchain
+    - toolchain   # [unix]
+    - msinttypes  # [win and py27]
     - python
     - setuptools
     - numpy x.x
-    - murmurhash >=0.26,<0.27
-    - cymem >=1.30,<1.32.0
-    - preshed >=0.46.1,<0.47
-    - thinc >=5.0.0,<5.1.0
-    - plac
-    - six
-    - cloudpickle
-    - pathlib  # [py2k]
-    - sputnik >=0.9.2,<0.10.0
-    - ujson >=1.35
 
   run:
     - python
