--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "spacy" %}
-{% set version = "1.6.0" %}
-{% set sha256sum = "18df95985cebf017250d14bb2a6d5a97c3f5e58d54f7e2ac319246fd3d00d841" %}
+{% set version = "1.7.2" %}
+{% set sha256sum = "ef7b636d326cab6388639fcb86ada7a7f434831f1f693c28f78ec8a50bc9be6c" %}
 
 package:
   name: {{ name }}
@@ -17,10 +17,8 @@ build:
   skip: True  # [not x86_64]
   features:
     - vc9   # [win and py27]
-    - vc14  # [win and py35]
-    - vc14  # [win and py36]
+    - vc14  # [win and py>=35]
 
-# Numpy version supported is >= 1.7.
 requirements:
   build:
     - toolchain   # [unix]
@@ -28,20 +26,23 @@ requirements:
     - python
     - setuptools
     - numpy x.x
+    - numpy >=1.7
 
   run:
     - python
     - numpy x.x
+    - numpy >=1.7
     - murmurhash >=0.26,<0.27
     - cymem >=1.30,<1.32.0
-    - preshed >=0.46.1,<0.47
-    - thinc >=6.2.0,<6.3.0
-    - plac
+    - preshed >=1.0.0,<2.0.0
+    - thinc >=6.5.0,<6.6.0
+    - plac >=0.9.6,<1.0.0
     - six
-    - cloudpickle
     - pathlib  # [py2k]
-    - sputnik >=0.9.2,<0.10.0
     - ujson >=1.35
+    - dill >=0.2,<0.3
+    - requests >=2.13.0,<3.0.0
+    - pip
 
 test:
   requires:
