--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,12 +7,12 @@ package:
   version: {{ version }}
 
 source:
-  fn: spacy-nighty-v2.0.0rc1.tar.gz
-  url: https://pypi.python.org/packages/d6/4c/a255a1a17245520f393b4facf62381611ca2384ac6bf3056fa499b2d5fe9/spacy-nightly-2.0.0rc1.tar.gz
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256sum }}
 
 build:
-  number: 1
+  number: 0
   script: python setup.py install -q --single-version-externally-managed --record=record.txt
   skip: True  # [not x86_64]
   features:
@@ -33,7 +33,6 @@ requirements:
   run:
     - python
     - libgcc     # [linux]
-    - numpy x.x
     - numpy >=1.7
     - numpy >=1.8   # [not (win and (py35 or py36))]
     - numpy >=1.9   # [win and py35]
