--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "spacy" %}
-{% set version = "2.0.1" %}
-{% set sha256sum = "6e872651dfaf9d930daa04110882b231d5fc5ffffbb3012ddd66575ddeb177d3" %}
+{% set version = "2.0.2.dev0" %}
+{% set sha256sum = "6062a50c072326b341bbea7ffb3ceab9d0fbfc47672d05d7ce225b3f8f3e6726" %}
 
 package:
   name: {{ name }}
