--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,13 +8,11 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://files.pythonhosted.org/packages/76/22/24579c1309c2321813d224d94a52d8c41f660387da72264104cff592ec6d/spacy-2.0.6.dev0.tar.gz
   sha256: {{ sha256sum }}
-  patches:
-    - patches/0001-Use-generic-optimizations.patch  # [linux]
 
 build:
-  number: 0
+  number: 1
   script: python setup.py install -q --single-version-externally-managed --record=record.txt
   skip: True  # [not x86_64]
   features:
