--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,6 @@
 {% set name = "spacy" %}
-{% set version = "2.0.10.dev0" %}
-{% set sha256sum = "4706254837733cac7f542e211b5828965da1292028ee7fe4e5bacf39abd6f2b2" %}
-
+{% set version = "1.10.1" %}
+{% set sha256sum = "89c401fabd2ca2730927d896d0b3dd67289514277ea7a8b0a886aee390cde12f" %}
 package:
   name: {{ name }}
   version: {{ version }}
@@ -37,21 +36,23 @@ requirements:
     - numpy >=1.8   # [not (win and (py35 or py36))]
     - numpy >=1.9   # [win and py35]
     - numpy >=1.11  # [win and py36]
-    - murmurhash >=0.28,<0.30
-    - cymem >=1.30,<1.32.0
-    - preshed >=1.0.0,<2.0.0
-    - thinc >=6.10.1,<6.11.0
-    - plac >=0.9.6,<1.0.0
-    - six >=1.10.0,<2.0.0
-    - pathlib  # [py2k]
-    - ujson >=1.35
-    - dill >=0.2,<0.3
-    - requests >=2.11.0,<3.0.0
-    - regex >=2017.4.1,<2017.12.1
-    - ftfy >=4.4.2,<5.0.0
-    - pip
-    - msgpack-numpy==0.4.1
-    - msgpack-python==0.5.4
+    - cython<0.24
+    - pathlib
+    - numpy>=1.7
+    - cymem>=1.30,<1.32
+    - preshed>=1.0.0,<2.0.0
+    - thinc>=6.5.0,<6.6.0
+    - murmurhash>=0.26,<0.27
+    - plac<1.0.0,>=0.9.6
+    - six
+    - html5lib==1.0b8
+    - ujson>=1.35
+    - dill>=0.2,<0.3
+    - requests>=2.11.0,<3.0.0
+    - regex>=2017.4.1,<2017.12.1
+    - ftfy>=4.4.2,<5.0.0
+    - pytest>=3.0.6,<4.0.0
+    - pip>=9.0.0,<10.0.0
 
 test:
   requires:
