Fix msgpack dependencies

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,8 +50,8 @@ requirements:
     - regex >=2017.4.1,<2017.12.1
     - ftfy >=4.4.2,<5.0.0
     - pip
-    - msgpack-numpy ==0.4.1
-    - msgpack-python ==0.5.4
+    - msgpack-numpy >=0.4.1,<0.5.0
+    - msgpack-python >=0.4.8,<0.5.0
 
 test:
   requires:
