--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,6 @@
 {% set name = "spacy" %}
-{% set version = "2.0.10" %}
-{% set sha256sum = "fd0795c42d06dd3dc7b3f851760df7d158424e30e09d7cfbeefcceb887b97d25" %}
-
+{% set version = "2.0.11.dev0" %}
+{% set sha256sum = "ed8ef9110f534b6ff50cc482e0ddb4ebb5791c4e4dc29846b94f76a70da894d5" %}
 package:
   name: {{ name }}
   version: {{ version }}
@@ -42,16 +41,10 @@ requirements:
     - preshed >=1.0.0,<2.0.0
     - thinc >=6.10.1,<6.11.0
     - plac >=0.9.6,<1.0.0
-    - six >=1.10.0,<2.0.0
     - pathlib  # [py2k]
     - ujson >=1.35
     - dill >=0.2,<0.3
-    - requests >=2.11.0,<3.0.0
-    - regex >=2017.4.1,<2017.12.1
-    - ftfy >=4.4.2,<5.0.0
-    - pip
-    - msgpack-numpy >=0.4.1,<0.5.0
-    - msgpack-python >=0.4.8,<0.5.0
+    - regex >=2017.4.5,<2017.12.1
 
 test:
   requires:
