--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "spacy" %}
-{% set version = "2.0.11.dev0" %}
-{% set sha256sum = "ed8ef9110f534b6ff50cc482e0ddb4ebb5791c4e4dc29846b94f76a70da894d5" %}
+{% set version = "2.0.11" %}
+{% set sha256sum = "cddb06e7965222e4339eb59d2258db8dadab19ef8b0a1a44a2d33f94935ba421" %}
 package:
   name: {{ name }}
   version: {{ version }}
