--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,22 +23,16 @@ requirements:
     - msinttypes  # [win and py27]
     - python
     - setuptools
-    # Pin numpy at build time with the minimum version available.
-    - numpy         # [not (win and (py35 or py36))]
-    - numpy         # [win and py35]
-    - numpy         # [win and py36]
+    - numpy
   run:
     - python
     - {{ pin_compatible('numpy') }}
-    - {{ pin_compatible('numpy') }}    # [not (win and (py35 or py36))]
-    - {{ pin_compatible('numpy') }}    # [win and py35]
-    - {{ pin_compatible('numpy') }}   # [win and py36]
     - murmurhash >=0.28,<0.30
     - cymem >=1.30,<1.32.0
     - preshed >=1.0.0,<2.0.0
     - thinc >=6.10.1,<6.11.0
     - plac >=0.9.6,<1.0.0
-    - pathlib  # [py2k]
+    - pathlib  # [py27]
     - ujson >=1.35
     - dill >=0.2,<0.3
     - regex >=2017.4.5,<2017.12.1
