--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,27 @@ jobs:
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./ci_support/run_docker_build.sh
+  build__CONDA_PY_37:
+    working_directory: ~/test
+    machine: true
+    environment:
+      - CONDA_PY: "37"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./ci_support/fast_finish_ci_pr_build.sh
+            ./ci_support/checkout_merge_commit.sh
+      - run:
+          command: docker pull condaforge/linux-anvil
+      - run:
+          name: Print conda-build environment variables
+          command: |
+            echo "CONDA_PY=${CONDA_PY}"
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./ci_support/run_docker_build.sh
 
 workflows:
   version: 2
@@ -72,3 +93,4 @@ workflows:
       - build__CONDA_PY_27
       - build__CONDA_PY_35
       - build__CONDA_PY_36
+      - build__CONDA_PY_37
