Try to specify the compilers without toolchain

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,8 @@ build:
 
 requirements:
   build:
-    - toolchain   # [unix]
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
     - msinttypes  # [win and py27]
     - python
     - setuptools
