--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,6 +38,7 @@ requirements:
     - dill >=0.2,<0.3
     - regex >=2017.4.5,<2017.12.1
     - requests >=2.13.0,<3.0.0
+    - msgpack-python >=0.5.0
 
 test:
   requires:
