--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256sum }}
 
 build:
-  number: 2
+  number: 0
   script: python setup.py install -q --single-version-externally-managed --record=record.txt
   skip: True  # [not x86_64]
 
@@ -60,6 +60,4 @@ about:
 
 extra:
   recipe-maintainers:
-    - rmax
-    - ines
-    - danielfrg
+    - ["rmax", "ines", "danielfrg", "honnibal"]
