--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "spacy" %}
-{% set version = "2.0.13" %}
-{% set sha256sum = "5621c1edf004f54f163bb3d922303675001dfce5fea50f93d6ecb59f5d1d4610" %}
+{% set version = "2.0.16" %}
+{% set sha256sum = "41de9353994aa782deb66a14742219b205ecd59fe11290ce39c4b914d05e0fbe" %}
 
 package:
   name: {{ name }}
@@ -26,14 +26,15 @@ requirements:
     - msinttypes  # [win and py27]
     - python
     - setuptools
-    - numpy
+    - numpy 1.15.*
   run:
     - python
-    - {{ pin_compatible('numpy') }}
-    - murmurhash >=0.28,<0.30
-    - cymem >=1.30,<1.32.0
-    - preshed >=1.0.0,<2.0.0
-    - thinc >=6.10.3,<6.11.0
+    - {{ pin_compatible('numpy', min_pin='1.15.x') }}
+      # msgpack-numpy
+    - murmurhash >=0.28,<1.1.0
+    - cymem >=2.0.0,<2.1.0
+    - preshed >=2.0.1,<2.1.0
+    - thinc >=6.12.0,<6.13.0
     - plac >=0.9.6,<1.0.0
     - pathlib  # [py27]
     - ujson >=1.35
