--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -59,7 +59,7 @@ about:
     spaCy is a library for advanced natural language processing in Python and
     Cython.
   doc_url: https://spacy.io
-  dev_url: https://github.com/spacy-io/spaCy
+  dev_url: https://github.com/explosion/spaCy
 
 extra:
   recipe-maintainers:
