--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,6 +37,7 @@ requirements:
     - cython-blis >=0.2.2,<0.3.0
     - plac <1.0.0,>=0.9.6
     - requests >=2.13.0,<3.0.0
+    - jsonschema
     - wasabi >=0.0.12,<1.1.0
     - srsly >=0.0.5,<1.1.0
     - pathlib >=1.0.0,<2.0.0  # [py27]
