--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "spacy" %}
-{% set version = "2.1.8" %}
-{% set sha256sum = "9c510459a66703739d6ba6c958fcff2627399dd813829a020d5644b532034ab6" %}
+{% set version = "2.2.0" %}
+{% set sha256sum = "2921352c60d730978c7b2ebfac54045284dfa2022245a061f9d1336ef1b8cfb1" %}
 
 package:
   name: {{ name }}
@@ -26,20 +26,20 @@ requirements:
     - python
     - setuptools
     - numpy 1.15.*
-    - wheel >=0.32,<0.33
+    - wheel
   run:
     - python
     - {{ pin_compatible('numpy', min_pin='1.15.x') }}
     - murmurhash >=0.28.0,<1.1.0
     - cymem >=2.0.2,<2.1.0
-    - preshed >=2.0.1,<2.1.0
-    - thinc >=7.0.4,<7.1.0
-    - cython-blis >=0.2.2,<0.3.0
+    - preshed >=3.0.2,<3.1.0
+    - thinc >=7.1.1,<7.2.0
+    - cython-blis >=0.4.0,<0.5.0
     - plac <1.0.0,>=0.9.6
     - requests >=2.13.0,<3.0.0
-    - jsonschema
-    - wasabi >=0.0.12,<1.1.0
-    - srsly >=0.0.5,<1.1.0
+    - jsonschema>=2.6.0,<3.1.0
+    - wasabi >=0.2.0,<1.1.0
+    - srsly >=0.1.0,<1.1.0
     - pathlib >=1.0.0,<2.0.0  # [py27]
  
 test:
