--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,6 +29,7 @@ requirements:
     - wheel
   run:
     - python
+    - setuptools
     - {{ pin_compatible('numpy', min_pin='1.15.x') }}
     - murmurhash >=0.28.0,<1.1.0
     - cymem >=2.0.2,<2.1.0
