Try to fix build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,12 @@ requirements:
   build:
     - pip
     - {{ compiler('cxx') }}
+    - setuptools
+    - murmurhash >=0.28.0,<1.1.0
+    - cymem >=2.0.2,<2.1.0
+    - preshed >=3.0.2,<3.1.0
+    - thinc >=7.1.1,<7.2.0
+    - cython-blis >=0.4.0,<0.5.0
   host:
     - pip
     - python
