Try to fix build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,12 +21,19 @@ requirements:
   build:
     - pip
     - {{ compiler('cxx') }}
+    - wheel
+    - cython>=0.25
+    - cymem>=2.0.2,<2.1.0
+    - preshed>=3.0.2,<3.1.0
+    - murmurhash>=0.28.0,<1.1.0
+    - thinc>=7.1.1,<7.2.0
+
   host:
     - pip
     - python
     - setuptools
     - numpy 1.15.*
-    - wheel >=0.32,<0.33
+    - wheel  
   run:
     - python
     - {{ pin_compatible('numpy', min_pin='1.15.x') }}
