--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
     - murmurhash >=0.28.0,<1.1.0
-    - thinc >=7.1.1,<7.2.0
+    - thinc >=7.3.0,<7.4.0
   host:
     - pip
     - python
@@ -36,14 +36,14 @@ requirements:
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
     - murmurhash >=0.28.0,<1.1.0
-    - thinc >=7.1.1,<7.2.0
+    - thinc >=7.3.0,<7.4.0
   run:
     - python
     - {{ pin_compatible('numpy', min_pin='1.15.x') }}
     - murmurhash >=0.28.0,<1.1.0
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
-    - thinc >=7.1.1,<7.2.0
+    - thinc >=7.3.0,<7.4.0
     - cython-blis >=0.4.0,<0.5.0
     - plac <1.0.0,>=0.9.6
     - requests >=2.13.0,<3.0.0
@@ -51,6 +51,7 @@ requirements:
     - srsly >=0.1.0,<1.1.0
     - jsonschema
     - pathlib >=1.0.0,<2.0.0  # [py27]
+    - importlib_metadata >=0.20
  
 test:
   requires:
