--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,13 +48,14 @@ requirements:
     - preshed >=3.0.2,<3.1.0
     - thinc ==7.4.0
     - cython-blis >=0.4.0,<0.5.0
-    - catalogue >=1.0.0,<1.1.0
+    - catalogue >=0.0.7,<1.1.0
     - plac <1.0.0,>=0.9.6
     - requests >=2.13.0,<3.0.0
     - wasabi >=0.4.0,<1.1.0
     - srsly >=1.0.2,<1.1.0
     - jsonschema
     - pathlib >=1.0.0,<2.0.0  # [py27]
+    - importlib-metadata >=0.20
 
 test:
   requires:
