--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,9 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256sum }}
-  patches: patches/0002-skip-multiproc-test.patch
+  patches:
+    - patches/0002-skip-multiproc-test.patch
+    - patches/0003-TEMP-update-numpy-headers.patch
 
 
 build:
