--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,32 +14,24 @@ source:
 
 
 build:
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
   skip: true  # [(win and py27) or (osx and py27)]
 
 requirements:
   build:
-    - pip
     - {{ compiler('cxx') }}
-    - wheel
-    - cython >=0.25
-    - cymem >=2.0.2,<2.1.0
-    - preshed >=3.0.2,<3.1.0
-    - murmurhash >=0.28.0,<1.1.0
-    - thinc ==7.4.1
-    - importlib-metadata >=0.20
   host:
     - pip
     - python
-    - numpy 1.16.*
+    - numpy 1.19.*
+    - setuptools
     - wheel
     - cython >=0.25
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
     - murmurhash >=0.28.0,<1.1.0
     - thinc ==7.4.1
-    - importlib_metadata >=0.20
   run:
     - python
     - {{ pin_compatible('numpy') }}
@@ -47,7 +39,7 @@ requirements:
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
     - thinc ==7.4.1
-    - cython-blis >=0.4.0,<0.5.0
+    - cython-blis >=0.4.0,<0.8.0
     - catalogue >=0.0.7,<1.1.0
     - plac <1.0.0,>=0.9.6
     - requests >=2.13.0,<3.0.0
