--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - {{ compiler('cxx') }}
   host:
     - pip
-    - python >=3.6
+    - python
     - numpy
     - setuptools
     - wheel
@@ -33,7 +33,7 @@ requirements:
     - thinc >=8.0.0,<8.1.0
     - cython-blis >=0.4.0,<0.8.0
   run:
-    - python >=3.6
+    - python
     # Our libraries
     - spacy-legacy >=3.0.0,<3.1.0
     - murmurhash >=0.28.0,<1.1.0
@@ -55,8 +55,8 @@ requirements:
     # Official Python utilities
     - setuptools
     - packaging >=20.0
-    - importlib_metadata>=0.20  # [py<=37]
-    - typing_extensions>=3.7.4  # [py<=37]
+    - importlib_metadata >=0.20  # [py<=37]
+    - typing_extensions >=3.7.4  # [py<=37]
 
 test:
   requires:
