--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -54,7 +54,7 @@ requirements:
     - tqdm >=4.38.0,<5.0.0
     - {{ pin_compatible('numpy') }}
     - requests >=2.13.0,<3.0.0
-    - pydantic >=1.7.1,<1.8.0
+    - pydantic >=1.7.4,!=1.8,!=1.8.1,<1.9.0
     - jinja2
     # Official Python utilities
     - setuptools
