--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,6 +47,7 @@ requirements:
     - wasabi >=0.8.1,<1.1.0
     - srsly >=2.4.1,<3.0.0
     - catalogue >=2.0.6,<2.1.0
+    - spacy-loggers >=1.0.0,<2.0.0
     # Exclude typer with unpinned click
     - typer >=0.3.2,<0.5.0
     - pathy >=0.3.5
