--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,11 +14,11 @@ build:
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
+    - {{ compiler('cxx') }}
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython                                 # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
-    - {{ compiler('cxx') }}
+    - python                                 # [build_platform != target_platform]
   host:
     - cymem >=2.0.2,<2.1.0
     - cython >=0.25,<3.0
@@ -50,15 +50,15 @@ requirements:
     - thinc >=8.0.12,<8.1.0
     - tqdm >=4.38.0,<5.0.0
     - typer >=0.3.2,<0.5.0
-    - typing_extensions >=3.7.4,<4.0.0.0  # [py<=37]
+    - typing-extensions >=3.7.4,<4.0.0.0  # [py<=37]
     - wasabi >=0.8.1,<1.1.0
 
 test:
   requires:
-    - pytest
-    - pytest-timeout
-    - mock
     - hypothesis
+    - mock
+    - pip
+    - pytest-timeout
   imports:
     - spacy
   commands:
@@ -66,15 +66,15 @@ test:
     - python -m pytest --tb=native --pyargs spacy -k "not beam_density"
 
 about:
-  home: https://spacy.io/
+  home: https://spacy.io
   license: MIT
   license_file: LICENSE
   summary: Industrial-strength Natural Language Processing
   description: |
     spaCy is a library for advanced natural language processing in Python and
     Cython.
-  doc_url: https://spacy.io
   dev_url: https://github.com/explosion/spaCy
+  doc_url: https://spacy.io
 
 extra:
   recipe-maintainers:
