clean up patches, tsts

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -63,7 +63,7 @@ test:
     - spacy
   commands:
     - pip check
-    - python -m pytest --tb=native --pyargs spacy -k "not beam_density"
+    - pytest -vv --tb=native --pyargs spacy -k "not beam_density"
 
 about:
   home: https://spacy.io
