--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,7 +50,7 @@ requirements:
     - spacy-loggers >=1.0.0,<2.0.0
     - typer >=0.3.2,<0.8.0
     - pathy >=0.10.0
-    - smart-open >=5.2.1,<7.0.0
+    - smart_open >=5.2.1,<7.0.0
     # Third-party dependencies
     - tqdm >=4.38.0,<5.0.0
     - {{ pin_compatible('numpy') }}
