--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,17 +43,18 @@ requirements:
     - murmurhash >=0.28.0,<1.1.0
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
-    - thinc >=8.1.8,<8.2.0
+    - thinc >=8.1.8,<8.3.0
     - wasabi >=0.9.1,<1.2.0
     - srsly >=2.4.3,<3.0.0
     - catalogue >=2.0.6,<2.1.0
     - spacy-loggers >=1.0.0,<2.0.0
     - typer >=0.3.2,<0.10.0
+    - weasel >=0.1.0,<0.4.0
+    # Third-party dependencies
+    - {{ pin_compatible('numpy') }}
     - pathy >=0.10.0
     - smart_open >=5.2.1,<7.0.0
-    # Third-party dependencies
     - tqdm >=4.38.0,<5.0.0
-    - {{ pin_compatible('numpy') }}
     - requests >=2.13.0,<3.0.0
     - pydantic >=1.7.4,!=1.8,!=1.8.1,<3.0.0
     - jinja2
