--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -70,6 +70,9 @@ test:
     - pytest-timeout
     - mock
     - hypothesis
+  source_files:
+    # for pytest markers
+    - setup.cfg
   imports:
     - spacy
   commands:
