--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,7 +36,7 @@ requirements:
     - murmurhash >=0.28.0,<1.1.0
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
-    - thinc >=8.1.8,<8.2.0
+    - thinc >=8.1.8,<8.3.0
   run:
     - python
     # Our libraries
@@ -45,6 +45,8 @@ requirements:
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
     - thinc >=8.1.8,<8.3.0
+    # Not Available on conda-forge, ml_datasets is only in requirements.txt and not setup.cg
+    #- ml_datasets >=0.2.0,<0.3.0 
     - wasabi >=0.9.1,<1.2.0
     - srsly >=2.4.3,<3.0.0
     - catalogue >=2.0.6,<2.1.0
@@ -53,7 +55,6 @@ requirements:
     - weasel >=0.1.0,<0.4.0
     # Third-party dependencies
     - {{ pin_compatible('numpy') }}
-    - pathy >=0.10.0
     - smart_open >=5.2.1,<7.0.0
     - tqdm >=4.38.0,<5.0.0
     - requests >=2.13.0,<3.0.0
@@ -63,7 +64,7 @@ requirements:
     # Official Python utilities
     - setuptools
     - packaging >=20.0
-    - typing_extensions >=3.7.4.1,<4.5.0  # [py<=37]
+    - typing_extensions >=3.7.4.1,<4.5.0  # [py<=38]
 
 test:
   requires:
