--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -78,7 +78,8 @@ test:
   imports:
     - spacy
   commands:
-    - python -m pytest --tb=native --pyargs {{ name }}
+    # tests run slowly on ci servers, so we skip them in particular aarch64 and ppc64le take between 3 hrs to sometimes going over 6 hours and failing.
+    - python -m pytest --tb=native --pyargs {{ name }}  # [not aarch64 and not ppc64le and python_impl == "cpython"]
 
 about:
   home: https://spacy.io/
