--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,8 +13,8 @@ source:
   patches:
     - patches/0001-skip-beam-density-test.patch
 
-
 build:
+  skip: true  # [py==312]
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
 
