--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,15 +1,13 @@
 {% set name = "spacy" %}
-{% set version = "3.7.4" %}
-{% set sha256sum = "525f2ced2e40761562c8cace93ef6a1e6e8c483f27bd564bc1b15f608efbe85b" %}
+{% set version = "3.7.5" %}
 
 package:
-  name: {{ name }}
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256sum }}
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/spacy-{{ version }}.tar.gz
+  sha256: a648c6cbf2acc7a55a69ee9e7fa4f22bdf69aa828a587a1bc5cfff08cf3c2dd3
   patches:
     - patches/0001-skip-beam-density-test.patch
 
@@ -22,40 +20,39 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython <3.0                            # [build_platform != target_platform]
-    - numpy                                  # [build_platform != target_platform]
+    - cython >=0.25,<3.0                     # [build_platform != target_platform]
+    - numpy >=1.15.0                         # [build_platform != target_platform]
     - {{ compiler('cxx') }}
     - {{ stdlib("c") }}
   host:
-    - pip
     - python
-    - numpy
     - setuptools
-    - wheel
     - cython >=0.25,<3.0
-    - murmurhash >=0.28.0,<1.1.0
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
-    - thinc >=8.1.8,<8.3.0
+    - murmurhash >=0.28.0,<1.1.0
+    - thinc >=8.2.2,<8.3.0
+    - numpy >=1.15.0
+    - pip
+    - wheel
   run:
     - python
     # Our libraries
     - spacy-legacy >=3.0.11,<3.1.0
+    - spacy-loggers >=1.0.0,<2.0.0
     - murmurhash >=0.28.0,<1.1.0
     - cymem >=2.0.2,<2.1.0
     - preshed >=3.0.2,<3.1.0
-    - thinc >=8.1.8,<8.3.0
+    - thinc >=8.2.2,<8.3.0
     # Not Available on conda-forge, ml_datasets is only in requirements.txt and not setup.cg
     #- ml_datasets >=0.2.0,<0.3.0 
     - wasabi >=0.9.1,<1.2.0
     - srsly >=2.4.3,<3.0.0
     - catalogue >=2.0.6,<2.1.0
-    - spacy-loggers >=1.0.0,<2.0.0
-    - typer >=0.3.2,<0.10.0
-    - weasel >=0.1.0,<0.4.0
+    - weasel >=0.1.0,<0.5.0
+    - typer >=0.3.0,<1.0.0
     # Third-party dependencies
     - {{ pin_compatible('numpy') }}
-    - smart_open >=5.2.1,<7.0.0
     - tqdm >=4.38.0,<5.0.0
     - requests >=2.13.0,<3.0.0
     - pydantic >=1.7.4,!=1.8,!=1.8.1,<3.0.0
