--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   skip: true  # [py==312]
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
 
 requirements:
@@ -21,7 +21,7 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython >=0.25,<3.0                     # [build_platform != target_platform]
-    - numpy >=1.15.0                         # [build_platform != target_platform]
+    - numpy                                  # [build_platform != target_platform]
     - {{ compiler('cxx') }}
     - {{ stdlib("c") }}
   host:
@@ -32,7 +32,7 @@ requirements:
     - preshed >=3.0.2,<3.1.0
     - murmurhash >=0.28.0,<1.1.0
     - thinc >=8.2.2,<8.3.0
-    - numpy >=1.15.0
+    - numpy
     - pip
     - wheel
   run:
@@ -52,7 +52,6 @@ requirements:
     - weasel >=0.1.0,<0.5.0
     - typer >=0.3.0,<1.0.0
     # Third-party dependencies
-    - {{ pin_compatible('numpy') }}
     - tqdm >=4.38.0,<5.0.0
     - requests >=2.13.0,<3.0.0
     - pydantic >=1.7.4,!=1.8,!=1.8.1,<3.0.0
@@ -61,7 +60,6 @@ requirements:
     # Official Python utilities
     - setuptools
     - packaging >=20.0
-    - typing_extensions >=3.7.4.1,<4.5.0  # [py<=37]
 
 test:
   requires:
