--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
     - patches/0001-skip-beam-density-test.patch
 
 build:
+  # needs tracing, which cython doesn't support for py312 yet.
   skip: true  # [py==312]
   number: 1
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
