[ci skip] [skip ci] ***NO_CI*** Switch to @conda-forge/spacy team

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -92,7 +92,5 @@ about:
 extra:
   recipe-maintainers:
     - rmax
-    - honnibal
-    - ines
-    - adrianeboyd
     - h-vetinari
+    - conda-forge/spacy
