[ci skip] Revert "Switch to @conda-forge/spacy team"
This reverts commit f2a9b70d736ebd1ce5af992044306400cecad7ef.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -92,5 +92,7 @@ about:
 extra:
   recipe-maintainers:
     - rmax
+    - honnibal
+    - ines
+    - adrianeboyd
     - h-vetinari
-    - conda-forge/spacy
